# esp32_wifi2iic

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
.devcontainer/: devcontainer.json
.github/workflows/: on_pr_job.yml
docker/: dev-env-setup.sh  dev.dockerfile  shell_additions
include/: esp32_uart_logger.hpp  http_request_data_reader.hpp  http_request_data_writer.hpp  http_response_data_writer.hpp  http_server.hpp  nvs_flash_guard.hpp  wifi_access_point_guard.hpp  wifi_iic_request_reader.hpp  wifi_iic_response_writer.hpp  wifi_station_guard.hpp
src/: esp-server.cpp  esp32_wifi2iic.cpp  service.options  service.proto  wifi_iic_relay.options  wifi_iic_relay.proto
test/: service_pb2.py  test_client.py  wifi_iic_relay_pb2.py
